[gd_scene load_steps=8 format=3 uid="uid://exn5x1cp0cdl"]

[ext_resource type="Script" uid="uid://p76wkkok3fbn" path="res://scripts/Bridge.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://23mfwfghdgw4" path="res://scenes/views/MapView.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://cwdt52x2rmng1" path="res://scenes/views/EventView.tscn" id="3"]
[ext_resource type="PackedScene" uid="uid://baq2lt5qgsmyf" path="res://scenes/views/LogView.tscn" id="4"]
[ext_resource type="PackedScene" path="res://scenes/views/ToolsView.tscn" id="5"]
[ext_resource type="PackedScene" uid="uid://ds7x4i7rfyii8" path="res://scenes/views/CrewView.tscn" id="6"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.11, 0.13, 0.18, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.37, 0.49, 0.72, 1)
corner_radius_top_left = 6
corner_radius_top_right = 6
corner_radius_bottom_right = 6
corner_radius_bottom_left = 6

[node name="Bridge" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.06, 0.07, 0.1, 1)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.9, 0.93, 1, 1)
text = "Bridge â€“ One Sea, One Awakening"

[node name="NavButtons" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
theme_override_constants/separation = 8
alignment = 1

[node name="MapButton" type="Button" parent="MarginContainer/VBoxContainer/TopBar/NavButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Map"

[node name="LogButton" type="Button" parent="MarginContainer/VBoxContainer/TopBar/NavButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Log"

[node name="ToolsButton" type="Button" parent="MarginContainer/VBoxContainer/TopBar/NavButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Tools"

[node name="CrewButton" type="Button" parent="MarginContainer/VBoxContainer/TopBar/NavButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Crew"

[node name="EventsButton" type="Button" parent="MarginContainer/VBoxContainer/TopBar/NavButtons"]
unique_name_in_owner = true
layout_mode = 2
text = "Event"

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("1")

[node name="ViewsContainer" type="Control" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2

[node name="MapView" parent="MarginContainer/VBoxContainer/PanelContainer/ViewsContainer" instance=ExtResource("2")]
unique_name_in_owner = true
layout_mode = 1

[node name="EventView" parent="MarginContainer/VBoxContainer/PanelContainer/ViewsContainer" instance=ExtResource("3")]
unique_name_in_owner = true
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0

[node name="LogView" parent="MarginContainer/VBoxContainer/PanelContainer/ViewsContainer" instance=ExtResource("4")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="ToolsView" parent="MarginContainer/VBoxContainer/PanelContainer/ViewsContainer" instance=ExtResource("5")]
unique_name_in_owner = true
visible = false
anchors_preset = 0

[node name="CrewView" parent="MarginContainer/VBoxContainer/PanelContainer/ViewsContainer" instance=ExtResource("6")]
unique_name_in_owner = true
visible = false
layout_mode = 1
